--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <img class="logo" src="https://drive.google.com/file/d/1IwXDwJrkTbejqIsGdbBC2Pna2as-5oeH/view?usp=sharing">
-    </div>
+    <img src="https://photos.app.goo.gl/1E33GtzHmEBPk8kUA">
   </header>
   <footer>
     <div class="container">
