--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IFG ～Instant Father Group～</title>
-  <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
   <header>
-    <img src="https://photos.app.goo.gl/1E33GtzHmEBPk8kUA">
+    <img src="https://drive.google.com/file/d/1IwXDwJrkTbejqIsGdbBC2Pna2as-5oeH/view?usp=sharing">
   </header>
   <footer>
     <div class="container">
