--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>IFG ～Instant Father Group～</title>
-</head>
-<body>
-  <header>
-    <img src="https://drive.google.com/file/d/1IwXDwJrkTbejqIsGdbBC2Pna2as-5oeH/view?usp=sharing">
-  </header>
-  <footer>
-    <div class="container">
-      <p>令和初、ビジュアル系バンド襲来</p>
-    </div>
-  </footer>
-</body>
-</html>
+  <head>
+    <meta charset="utf-8">
+    <title>Progate</title>
+    <link rel="stylesheet" href="stylesheet.css">
+  </head>
+  <body>
+    <h1 class="title">IFG ～boys music band～</h1>
+    <p>世界中から集結したプロミュージシャン達</p>
+    <h2>メンバー紹介</h2>
+    <h3>ボーカル担当　しのさん</h3>
+    <p>全米が涙した奇跡の低音。聞いた者をメロメロにさせる力をもつ。通称メロ。</p>
+    <img src="https://d.kuku.lu/5ccc31504" alt="">
+    <h3>ドラム担当　いのっち</h3>
+    <p>現役のイタコ。現在もパット・トーピーが乗り移っている。</p>
+    <h3>ベース担当　五月女ぽいって</h3>
+    <p>某鉄道会社のレール整備士。「レールの響きはベースも同じ、祇園精舎の鐘の音。」ポイってよ！</p>
+    <h3>ギター担当　MItsuoh-VH</h3>
+    <p>中東で油田採掘中に穴に落下してから記憶喪失。</p>
+  </body>
+</html> 
