--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>メンバー紹介</h2>
     <h3>ボーカル担当　しのさん</h3>
     <p>全米が涙した奇跡の低音。聞いた者をメロメロにさせる力をもつ。通称メロ。</p>
-    <img src="https://d.kuku.lu/5ccc31504" alt="">
+    <img src="IMG_1344.JPG" alt="">
     <h3>ドラム担当　いのっち</h3>
     <p>現役のイタコ。現在もパット・トーピーが乗り移っている。</p>
     <h3>ベース担当　五月女ぽいって</h3>
