--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p>現役のイタコ。現在もパット・トーピーが乗り移っている。</p>
     <h3>ベース担当　五月女ぽいって</h3>
     <p>某鉄道会社のレール整備士。「レールの響きはベースも同じ、祇園精舎の鐘の音。」ポイってよ！</p>
-    <h3>ギター担当　MItsuoh-VH</h3>
+    <h3>ギター担当　Mitsuoh-VH</h3>
     <p>中東で油田採掘中に穴に落下してから記憶喪失。</p>
   </body>
 </html> 
