--- a/index.html
+++ b/index.html
@@ -10,13 +10,18 @@
     <p>世界中から集結したプロミュージシャン達</p>
     <h2>メンバー紹介</h2>
     <h3>ボーカル担当　しのさん</h3>
-    <p>全米が涙した奇跡の低音。聞いた者をメロメロにさせる力をもつ。通称メロ。</p>
-    <img src="IMG_1344.JPG" alt="">
+    <img src="vo.shi.JPG" alt="">
+    <p>全米が泣いた奇跡の低音。聞いた者をメロメロにさせる力をもつ。通称メロ。</p>    
     <h3>ドラム担当　いのっち</h3>
+    <img src="dr.JPG" alt="">
     <p>現役のイタコ。現在もパット・トーピーが乗り移っている。</p>
     <h3>ベース担当　五月女ぽいって</h3>
+    <img src="ba.JPG" alt="">
     <p>某鉄道会社のレール整備士。「レールの響きはベースも同じ、祇園精舎の鐘の音。」ポイってよ！</p>
     <h3>ギター担当　Mitsuoh-VH</h3>
+    <img src="gui.JPG" alt="">
     <p>中東で油田採掘中に穴に落下してから記憶喪失。</p>
+    <h3>マネジャー Michan</h3>
+    <img src="micky.JPG" alt="">
   </body>
 </html> 
