--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     <p>中東で油田採掘中に穴に落下してから記憶喪失。</p>
     <h3>マネジャー Michan</h3>
     <img src="micky.JPG" alt="">
+    <p>Cool bearty!</p>
   </body>
 </html> 
