--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h3>ギター担当　Mitsuoh-VH</h3>
     <p>中東で油田採掘中に穴に落下してから記憶喪失。</p>
     <img src="gui.JPG" alt="">
-    <h3>マネジャー ミッチャン</h3>
+    <h3>マネージャー ミッチャン</h3>
     <p>Cool bearty!</p>
     <img src="micky.JPG" alt="">
   </body>
