--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1 class="title">IFG ～boys music band～</h1>
     <p>世界中から集結したプロミュージシャン達</p>
-    <h2>メンバー紹介</h2>
+    <h2>■メンバー紹介■</h2>
     <h3>ボーカル担当　しのさん</h3>
     <p>全米が泣いた奇跡の低音。聞いた者をメロメロにさせる力をもつ。通称"泣かせのしの"。</p>  
     <img src="vo.shi.JPG" alt="">
