--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="responsive.css">
   </head>
   <body>
-    <h1 class="title">IFG ～boys music band～</h1>
+    <h1 class="title">IFG <br> ～boys music band～</h1>
     <p>世界中から集結したプロミュージシャン達</p>
     <h2>■メンバー紹介■</h2>
     <h3>ボーカル担当　しのさん</h3>
