--- a/index.html
+++ b/index.html
@@ -29,5 +29,12 @@
     　　　<p>スナック始めました!</p>
     　　　<img src="sao.jpg" alt="">
 
+    <h1>メディアお問い合わせ</h1>
+    <p>メールアドレス(必須)</p>
+    <input>
+    <p>お問い合わせ内容(必須)</p>
+    <textarea></textarea>
+    
+
   </body>
 </html> 
