--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     　　　<p>スナック始めました!</p>
     　　　<img src="sao.jpg" alt="">
 
-    <h1>メディアお問い合わせ</h1>
+    <h2>メディア取材連絡先</h2>
     <p>メールアドレス(必須)</p>
     <input>
     <p>お問い合わせ内容(必須)</p>
